OLMIS-1777: Added pagination to the Convert to Order page
- renamed table-container class to openlmis-table-container in order to
  avoid any future conflicts
- fixed some styleguide tables
- modified openlmis-pagination to be more generic and be able to support
  backend pagination and use ng-model goodness
- removed paginatedListFactory
- added paginatedRouterProvider and paginationFactory to avoid code
  duplication in paginated controllers
- replaced flex-table directive with openlmis-table one
- made pagination stick on the requisition view
- modified all tables to use the same markup
- lowered padding inside the tables
- modified pagination on the ProofOfDeliveryView, FullSupply and
  NonFullSupply pages
- added pagination to the Convert to Order screen

--- a/src/main/webapp/admin-template-list/program-administration-list.html
+++ b/src/main/webapp/admin-template-list/program-administration-list.html
@@ -1,7 +1,7 @@
 <div class="program-template-list">
     <div class="page">
         <h2>{{'configure.rnr.header' | message}}</h2>
-        <div class="table-container">
+        <div class="openlmis-table-container">
             <table class="openlmis-table" ng-if="vm.programs.length">
         		<thead>
         		<tr>
