--- a/src/main/webapp/report/report-list.html
+++ b/src/main/webapp/report/report-list.html
@@ -1,8 +1,8 @@
 <div class="report-list">
     <div class="page">
         <h2>{{'header.viewReports' | message}}</h2>
-        <div class="table-container">
-            <table>
+        <div class="openlmis-table-container">
+            <table class="openlmis-table">
                 <caption class="error" ng-if="!vm.reports.length">{{'message.no.reports' | message}}</caption>
                 <thead>
                 <tr>
