--- a/src/main/webapp/report/report-options.html
+++ b/src/main/webapp/report/report-options.html
@@ -1,6 +1,6 @@
 <div class="page">
     <h2>{{'choose.report.options.header' | message}}</h2>
-    <section class="table-container">
+    <section class="openlmis-table-container">
         <div>
             <div ng-repeat="parameter in vm.report.templateParameters">
                 <label for="{{parameter.name}}">{{parameter.displayName}}</label>
