--- a/src/main/webapp/requisition-approval/requisition-approval-list.html
+++ b/src/main/webapp/requisition-approval/requisition-approval-list.html
@@ -1,6 +1,6 @@
 <div class="page">
     <h2>{{'label.approve.requisitions' | message}}</h2>
-    <div class="table-container">
+    <div class="openlmis-table-container">
         <table class="openlmis-table" ng-if="vm.filteredRequisitions">
             <caption ng-if="!vm.filteredRequisitions.length">
                 {{'message.no.rnr.pending.approval' | message}}
