--- a/src/main/webapp/requisition-full-supply/full-supply.html
+++ b/src/main/webapp/requisition-full-supply/full-supply.html
@@ -1,26 +1,31 @@
-<div class="product-grid table-container">
-	<div class="table-control">
+<div class="openlmis-table-container">
+	<div class="openlmis-table-controls">
 		<a href="" ng-click="vm.skipAll()">{{'requisition.lineItem.skip.all' | message}}</a> |
 		<a href="" ng-click="vm.unskipAll()">{{'requisition.lineItem.skip.none' | message}}</a>
 	</div>
-	<table class="openlmis-table" table-pinned-columns>
-		<thead>
-			<tr>
-				<th class="col-{{column.name}}" ng-repeat="column in vm.columns | orderBy : 'displayOrder'" ng-class="{sticky: !column.$canChangeOrder}" popover="{{column.definition}}">{{column.label}}
-				</th>
-			</tr>
-		</thead>
-		<tbody title="{{category}}" ng-repeat="(category, lineItems) in vm.getCurrentPage() | groupBy:'$program.orderableCategoryDisplayName'">
-			<tr ng-class="{'invalid-row': !vm.isLineItemValid(lineItem), 'skipped-line-item' : lineItem.skipped}"
-				ng-repeat="lineItem in lineItems | orderBy : 'orderable.name'">
-				<td ng-repeat="column in vm.columns | orderBy : 'displayOrder'"
-					product-grid-cell requisition="vm.requisition" column="column" line-item="lineItem"></td>
-			</tr>
-		</tbody>
-	</table>
-	<openlmis-pagination current-page="vm.currentPage"
-		is-item-valid="vm.isLineItemValid"
-		change-page="vm.changePage"
-		paginated-items="vm.paginatedLineItems">
-	</openlmis-pagination>
+	<div class="openlmis-table">
+		<table table-pinned-columns>
+			<thead>
+				<tr>
+					<th class="col-{{column.name}}" ng-repeat="column in vm.columns | orderBy : 'displayOrder'" ng-class="{sticky: !column.$canChangeOrder}" popover="{{column.definition}}">{{column.label}}
+					</th>
+				</tr>
+			</thead>
+			<tbody title="{{category}}" ng-repeat="(category, lineItems) in vm.lineItems | groupBy:'$program.orderableCategoryDisplayName'">
+				<tr ng-class="{'invalid-row': !vm.isLineItemValid(lineItem), 'skipped-line-item' : lineItem.skipped}"
+					ng-repeat="lineItem in lineItems | orderBy : 'orderable.name'">
+					<td ng-repeat="column in vm.columns | orderBy : 'displayOrder'"
+						product-grid-cell requisition="vm.requisition" column="column" line-item="lineItem"></td>
+				</tr>
+			</tbody>
+		</table>
+		<openlmis-pagination ng-model="vm.page"
+			total-items="vm.totalItems"
+			items="vm.lineItems.length"
+			page-size="vm.pageSize"
+			ng-change="vm.changePage(vm.page)"
+			page-validator="vm.isPageValid"
+			class="sticky">
+		</openlmis-pagination>
+	</div>
 </div>
