OLMIS-1648: Fixed total adjustments recalculations
Used ng-changed to recalculate every time we someone changes a value
in the adjustment list.

--- a/src/main/webapp/requisition-losses-and-adjustments/losses-and-adjustments-modal.html
+++ b/src/main/webapp/requisition-losses-and-adjustments/losses-and-adjustments-modal.html
@@ -35,6 +35,7 @@
             <input id="adjustment-quantity-{{$index}}"
                    class="form-control"
                    ng-model="adjustment.quantity"
+                   ng-change="vm.recalculateTotal()"
                    required positive-integer />
             <button class="btn btn-danger" ng-click="vm.removeAdjustment(adjustment)">
                 {{'button.remove' | message}}
