OLMIS-1643: added confirm modal for removing offline requisitions

--- a/src/main/webapp/requisition-search/requisition-search.html
+++ b/src/main/webapp/requisition-search/requisition-search.html
@@ -45,7 +45,7 @@
                     <th>{{'label.status' | message}}</th>
                     <th>{{'label.emergency' | message}}</th>
                     <th>{{'msg.requisition.view.offline' | message}}</th>
-                    <th></th>
+                    <th>{{'label.actions'| message}}</th>
                 </tr>
             </thead>
             <tbody>
