--- a/src/main/webapp/requisition-losses-and-adjustments/losses-and-adjustments-cell.html
+++ b/src/main/webapp/requisition-losses-and-adjustments/losses-and-adjustments-cell.html
@@ -1,3 +1,3 @@
-<a ng-click="vm.showModal()" class="rnr-adjustment">
+<a class="losses-and-adjustments" ng-class="{'disabled': vm.disabled}" ng-click="vm.showModal()">
     {{vm.lineItem.totalLossesAndAdjustments || 0}}
 </a>
